Dodan about prozor, kreirana animacija unutar prozora.

--- a/res/Translation_fr.properties
+++ b/res/Translation_fr.properties
@@ -23,3 +23,5 @@ uzam=Performance des employés pour le mois
 uu=Saisissez votre nom d'utilisateur 
 ik=Supprimer l'utilisateur
 dnk=Ajouter un nouvel utilisateur
+autor=Author Haris Kukuruzovi?
+vrs=Versione 1.0
