--- a/res/Translation_bs.properties
+++ b/res/Translation_bs.properties
@@ -23,3 +23,5 @@ uzam=U?inak zaposlenika za mjesec
 uu=Unesi username 
 ik=Izbriši korisnika
 dnk=Dodaj novog korisnika
+autor=Autor Haris Kukuruzovi?
+vrs=Verzija 1.0
