Dodan novi font i mala popravka kod encodinga specifičnih karaktera.

--- a/res/Translation_bs.properties
+++ b/res/Translation_bs.properties
@@ -1,12 +1,12 @@
 apok=Aplikacija je pokrenuta.
 login=Prijava
-username=korisni?ko ime
-password=šifra
+username=korisni\u010Dko ime
+password=\u0161ifra
 vrijeme=Vrijeme
-remote=Od ku?e
+remote=Od ku\u0107e
 onsite=Na poslu
-pocetak=Zapo?ni
-kraj=Završi
+pocetak=Zapo\u010Dni
+kraj=Zavr\u0161i
 ivr=Izaberi vrstu rada
 ime=Ime
 prezime=Prezime
@@ -16,12 +16,12 @@ predaj=Predaj
 odustani=Odustani
 logut=Odjava
 pa=Posljednje aktivnosti
-ppo=Pretraži po username-u
+ppo=Pretra\u017Ei po username-u
 id=Izaberi dan
-search=Pretraži
-uzam=U?inak zaposlenika za mjesec 
+search=Pretra\u017Ei
+uzam=U\u010Dinak zaposlenika za mjesec 
 uu=Unesi username 
-ik=Izbriši korisnika
+ik=Izbri\u0161i korisnika
 dnk=Dodaj novog korisnika
-autor=Autor Haris Kukuruzovi?
+autor=Autor Haris Kukuruzovi\u0107
 vrs=Verzija 1.0
