Dodana mogućnost kreiranja Jasper izvještaja.

--- a/res/Translation_fr.properties
+++ b/res/Translation_fr.properties
@@ -1,27 +1,28 @@
-apok=L'application est cours d'exécution.
+apok=L'application est cours d'ex\u00E9cution.
 login=Connexion
 username=nom d'utilisateur
 password=le mot de passe
 vrijeme=temps
-remote=à distance
+remote=\u00E0 distance
 onsite=Sur site
-pocetak=début
+pocetak=d\u00E9but
 kraj=finir
-ivr=Sélectionnez le type de travail
+ivr=S\u00E9lectionnez le type de travail
 ime=Nom
 prezime=Nom de famille
 admin=Administrateur
 password1=Password
 predaj=Predaj
 odustani=Annuler
-logut=Déconnecter
-pa=Activités récentes
+logut=D\u00E9connecter
+pa=Activit\u00E9s r\u00E9centes
 ppo=Recherche par nom d'utilisateur
 id=Choisir le jour
 search=Chercher
-uzam=Performance des employés pour le mois 
+uzam=Performance des employ\u00E9s pour le mois 
 uu=Saisissez votre nom d'utilisateur 
 ik=Supprimer l'utilisateur
 dnk=Ajouter un nouvel utilisateur
 autor=Author Haris Kukuruzovi?
 vrs=Versione 1.0
+report=Raport
