Dodane ikonia za prozore, dodani prevodi alertova i promijenjen način gledanja prijavljavinja korisnika na posao.

--- a/res/Translation_bs.properties
+++ b/res/Translation_bs.properties
@@ -26,3 +26,17 @@ dnk=Dodaj novog korisnika
 autor=Autor Haris Kukuruzovi\u0107
 vrs=Verzija 1.0
 report=Izvje\u0161taj
+Upozorenje=Upozorenje
+Error=Gre\u0161ka
+gpa=Gre\u0161ka prilikom autentikacije!
+np=Neta\u010Dni podaci!
+duga=Upozorenje o vrsti rada ili niste zavr\u0161ili prethodnu sesiju
+duga2=Morate odabrati vrstu rada ili zavr\u0161ite prethodnu sesiju!
+uos=Upozorenje o satnici
+preduga=Odjavili ste se prije kraja radnog vremena, satnica \u0107e vam biti zabilje\u017Eena!
+rad2=Morate se prijaviti da radite kako bi se odjavili!
+uovr=Upozorenje o vrsti rada
+movr=Morate odabrati vrstu rada!
+uonk=Upozorenje o novom korisniku
+usera=Username nije unikatan!
+ssn=\u0160ifre se ne poklapaju!
