--- a/res/Translation_fr.properties
+++ b/res/Translation_fr.properties
@@ -12,7 +12,7 @@ ime=Nom
 prezime=Nom de famille
 admin=Administrateur
 password1=Password
-predaj=Predaj
+predaj=Remettre
 odustani=Annuler
 logut=D\u00E9connecter
 pa=Activit\u00E9s r\u00E9centes
@@ -23,6 +23,20 @@ uzam=Performance des employ\u00E9s pour le mois
 uu=Saisissez votre nom d'utilisateur 
 ik=Supprimer l'utilisateur
 dnk=Ajouter un nouvel utilisateur
-autor=Author Haris Kukuruzovi?
+autor=Author Haris Kukuruzovi\u0107
 vrs=Versione 1.0
 report=Raport
+Upozorenje=Attention
+Error=Erreur
+gpa=Authentication error !
+np=Donn\u00E9es inexactes !
+duga=Avertissement sur le type de travail ou vous n'avez pas termin\u00E9 la session pr\u00E9c\u00E9dente
+duga2=Vous devez s\u00E9lectionner un type de travail ou mettre fin \u00E0 une session pr\u00E9c\u00E9dente !
+uos=Avertissement horaire
+preduga=Vous avez v\u00E9rifi\u00E9 avant la fin des heures de travail, votre emploi du temps sera enregistr\u00E9 !
+rad2=Vous devez vous connecter pour travailler afin de vous d\u00E9connecter!
+uovr=Avertissement sur le type de travail
+movr=Vous devez choisir le type de travail!
+uonk=Alerte nouvel utilisateur
+usera=Le nom d'utilisateur n'est pas unique !
+ssn=Les codes ne correspondent pas !
